# sw-hours_alignment

./: .cursorrules  Dockerfile  README.md  config.example.txt  pyproject.toml
src/: config.py  explore_sql.py  main.py
src/Data/: Hourly rate 2026.xlsx  __init__.py  connections.py  data_sources.py
src/Workflow/: matching.py  reconciliation.py  report.py
